implement CRUD api for circular
